@@ -1,16 +1,11 @@
-subprojects {
+allprojects {
     group 'aticatac'
-    version '1.0-SNAPSHOT'
     apply plugin: 'java'
     sourceCompatibility = 1.11
     targetCompatibility = 1.11
     repositories {
         mavenCentral()
-    }
-    dependencies {
-        testCompile group: 'junit', name: 'junit', version: '4.12'
-        implementation group: 'log4j', name: 'log4j', version: '1.2.17'
-        implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+        jcenter()
     }
     ext {
         appName = "my-gdx-com.mygdx.game"
@@ -20,6 +15,84 @@ subprojects {
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
     }
+    dependencies {
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+        testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
+        implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+        implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+        compile 'org.apache.commons:commons-collections4:4.1'
+        compile 'org.jetbrains:annotations:16.0.1'
+    }
+    test {
+        useJUnitPlatform()
+    }
 }
+
+project(':common') {
+    dependencies {
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+        implementation 'org.reflections:reflections:0.9.11'
+        implementation 'com.google.code.gson:gson:2.8.5'
+    }
+    sourceSets {
+        test {
+            java.srcDir file('src/game/java/')
+            resources.srcDir 'src/game/resources'
+        }
+
+    }
+}
+
+
+project(':client') {
+    apply plugin: 'application'
+
+    application {
+        mainClassName = "com.aticatac.client.networking.Main"
+    }
+
+    dependencies {
+        implementation 'org.reflections:reflections:0.9.11'
+        implementation 'com.google.code.gson:gson:2.8.5'
+        compile project(':common')
+        implementation 'com.google.guava:guava:27.1-jre'
+        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+    }
+    task execDesktop(type: JavaExec) {
+        main = "com.aticatac.client.desktop.DesktopLauncher"
+        classpath = sourceSets.main.runtimeClasspath
+        jvmArgs '--illegal-access=deny'
+    }
+}
+project(':database') {
+    apply plugin: 'application'
+    application {
+        mainClassName = "com.aticatac.database.Main"
+    }
+    dependencies {
+        compile 'org.mybatis:mybatis:3.4.6'
+        implementation 'org.postgresql:postgresql:42.2.5.jre7'
+        compile project(':common')
+
+    }
+    task database(type: JavaExec) {
+        main = "com.aticatac.database.Main"
+        classpath = sourceSets.main.runtimeClasspath
+        jvmArgs '--illegal-access=deny'
+    }
+    task dbclient(type: JavaExec) {
+        main = "com.aticatac.database.Client"
+        classpath = sourceSets.main.runtimeClasspath
+        jvmArgs '--illegal-access=deny'
+    }
+}
+
 
 
